package message;

option optimize_for = LITE_RUNTIME;


/////////////////协议范围 101 ~~~~150

//查找相邻节点请求
message FindRecentNodeReq{
	optional int32    Timeout         = 1;                   //超时时间，单位秒
	optional string   NodeId          = 2;                   //节点id
}

//查找节点请求
message FindNode{
	optional int32    Timeout         = 1;                   //超时时间，单位秒
	optional string   NodeId          = 2;                   //超级节点id
	optional string   FindId          = 3;                   //要查找节点id
	optional bool     IsProxy         = 4;                   //是否是被代理
	optional string   ProxyId         = 5;                   //被代理节点id
	optional string   Addr            = 6;                   //外网地址
	optional int32    TcpPort         = 7;                   //TCP端口
	optional int32    UdpPort         = 8;                   //UDP端口
	optional int32    Status          = 9;                   //节点状态
}
