package message;

option optimize_for = LITE_RUNTIME;


/////////////////协议范围 151 ~~~~200

//查找节点请求
message SaveDataReq{
	optional int32    Timeout         = 1;                   //超时时间，单位秒
	optional string   NodeId          = 2;                   //节点id
	optional string   FindId          = 3;                   //要查找节点id
	optional bool     IsSuper         = 4;                   //是否是超级节点
	optional string   Addr            = 5;                   //外网地址
	optional int32    TcpPort         = 6;                   //TCP端口
	optional int32    UdpPort         = 7;                   //UDP端口
	optional int32    Status          = 8;                   //节点状态
}

